--- a/helm/ingress/ingress.yaml
+++ b/helm/ingress/ingress.yaml
@@ -15,7 +15,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: argo-cd-argocd-server
+            name: argocd-server
             port:
               number: 80
 
